# ObjectTracking

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
modules/: Map.cpp  Map.hpp  MapBasedTracker.cpp  MapBasedTracker.hpp  ModifiedKalmanFilter.cpp  ModifiedKalmanFilter.hpp  MovingObject.cpp  MovingObject.hpp  MultipleTracker.cpp  MultipleTracker.hpp  TrackerBase.hpp  TrackerCore.cpp  TrackerCore.hpp  TrackerFiles.hpp  VideoProcessor.cpp  VideoProcessor.hpp
tests/: Map_test.cpp  Tracker_test.cpp  VideoProcessor_test.cpp  background_creator.cpp
